Control replication `mirror` option from Docker Compose
Adds suport for `MIRROR` environment varialbe to control replication
`remote.mirror` behaviour. This simplify testing of replication
mirroring.

Change-Id: I0b82d7166a2e0936999ff58a83003a27d392983b

--- a/example-setup/broker/docker-compose.yaml
+++ b/example-setup/broker/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - BROKER_HOST=broker
       - BROKER_PORT=9092
       - REPLICATE_ON_STARTUP=false
+      - MIRROR=true
     ports:
       - "8080:8080"
       - "29418:29418"
@@ -28,6 +29,7 @@ services:
       - BROKER_HOST=broker
       - BROKER_PORT=9092
       - REPLICATE_ON_STARTUP=true
+      - MIRROR=true
     ports:
       - "8081:8080"
       - "29419:29418"
